# CrossLLM

./: .env.example  .gitignore  README.md  requirements.txt
baselines/: README.md
benchmarks/: BENCHMARK_METADATA.schema.json  README.md
docs/: BENCHMARK_TEST_GUIDE.md  BSC_ARCHIVAL_RPC_SETUP.md  FEEDBACK_VULSEYE_SMARTSHOT.md  FPR_LABELING_GUIDE.md  FPR_LABELING_SHEET_v2.csv  GIAI_THICH_CROSS_CHAIN_BRIDGE.md  INDEX.md  LLM_VERIFICATION_FULL_DATASET.md  LLM_VERIFICATION_RONIN_HARMONY.md  PAPER_TIENG_VIET.md  PLAN_IMPLEMENTATION.md  PLAN_IMPROVE_MEMBER_A.md  PLAN_PAPER_EXPERIMENTS.md  REIMPL_VULSEYE_SPEC.md  (+18 more)
src/module3_fuzzing/: Cargo.toml  results.json
src/module3_fuzzing/src/: checker.rs  config.rs  contract_loader.rs  coverage_tracker.rs  dual_evm.rs  fuzz_loop.rs  main.rs  mock_relay.rs  mutator.rs  scenario_sim.rs  snapshot.rs  storage_tracker.rs  types.rs
src/module3_fuzzing/src/baselines/: mod.rs  xscope.rs  xscope_adapter.rs
src/module3_fuzzing/src/baselines/smartshot/: double_validate.rs  fuzz_loop_smartshot.rs  mod.rs  mutable_snapshot.rs  sload_inspector.rs  snapshot_mutate.rs  snapshot_pool.rs  taint_cache.rs
src/module3_fuzzing/src/baselines/vulseye/: code_targets.rs  fitness.rs  fuzz_loop_vulseye.rs  ga_select.rs  mod.rs  patterns.rs  state_targets.rs
tools/smartaxe_reimpl/: README.md  pyproject.toml
tools/smartaxe_reimpl/data/: event_signatures.json
tools/smartaxe_reimpl/smartaxe_reimpl/: __init__.py  __main__.py  bridge_config.py  cfg_builder.py  detector.py  models.py  output.py  pattern_inference.py  security_checks.py  xcfg_builder.py  xdfg_builder.py
tools/smartaxe_reimpl/tests/: test_bridge_config.py  test_cfg_builder.py  test_detector.py  test_models.py  test_pattern_inference.py  test_sc_prediction.py  test_security_checks.py  test_xcfg_builder.py  test_xdfg_builder.py
tools/smartaxe_reimpl/tests/fixtures/: TinyBridge.sol
(+443 files in other folders)
