[package]
name = "bridgesentry-fuzzer"
version = "0.1.0"
edition = "2021"
description = "Synchronized Dual-Chain Fuzzing Engine for BridgeSentry"

[dependencies]
revm = { version = "20", features = ["std", "serde"] }
alloy-primitives = "1"
alloy-provider = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
hex = "0.4"
