[package]
name = "bridgesentry-fuzzer"
version = "0.1.0"
edition = "2021"
description = "Synchronized Dual-Chain Fuzzing Engine for BridgeSentry"

[dependencies]
revm = { version = "9", default-features = false, features = ["std", "serde", "ethersdb"] }
ethers-providers = "2.0"
ethers-core = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
hex = "0.4"
